test/error/missing-argument.dsk
let f = (a: int, b: int = 0) -> void
    return
end

f(b = 1)
